--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Excercises 3</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body background="images/bg.jpg">
